ifcviewer/ifcengine/include/ifcengine.h


typedef	int_t			* SdaiAggr;
typedef	void			* SdaiAttr;
typedef	int_t			SdaiEntity;
typedef	int_t			SdaiInstance;
typedef	int_t			SdaiInteger;
typedef	int_t			SdaiModel;
typedef	int_t			SdaiPrimitiveType;
typedef	int_t			SdaiIterator;
typedef	int64_t			ExpressID;
SdaiInstance	DECL STDC	sdaiCreateInstanceBNEI(
									SdaiModel				model,
									const char				* entityName,
									ExpressID				expressID
								);
static	inline	SdaiInstance	sdaiCreateInstanceBNEI(
										SdaiModel				model,
										char					* entityName,
										ExpressID				expressID
									)
{
	return	sdaiCreateInstanceBNEI(
					model,
					(const char*) entityName,
					expressID
				);
}
void			DECL STDC	setSegmentation(
									SdaiModel				model,
									int_t					segmentationParts,
									double					segmentationLength
								);
void			DECL STDC	getSegmentation(
									SdaiModel				model,
									int_t					* segmentationParts,
									double					* segmentationLength
								);
void			DECL STDC	setEpsilon(
									SdaiModel				model,
									int_t					mask,
									double					absoluteEpsilon,
									double					relativeEpsilon
								);
int_t			DECL STDC	getEpsilon(
									SdaiModel				model,
									int_t					mask,
									double					* absoluteEpsilon,
									double					* relativeEpsilon
								);
void			DECL STDC	circleSegments(
									int_t					circles,
									int_t					smallCircles
								);
void			DECL STDC	setMaximumSegmentationLength(
									SdaiModel				model,
									double					length
								);
double			DECL STDC	getUnitConversionFactor(
									SdaiModel				model,
									const char				* unitType,
									const char				** unitPrefix,
									const char				** unitName,
									const char				** SIUnitName
								);
static	inline	double	getUnitConversionFactor(
								SdaiModel				model,
								char					* unitType,
								char					** unitPrefix,
								char					** unitName,
								char					** SIUnitName
							)
{
	return	getUnitConversionFactor(
					model,
					(const char*) unitType,
					(const char**) unitPrefix,
					(const char**) unitName,
					(const char**) SIUnitName
				);
}
void			DECL STDC	setBRepProperties(
									SdaiModel				model,
									int64_t					consistencyCheck,
									double					fraction,
									double					epsilon,
									int_t					maxVerticesSize
								);
void			DECL STDC	cleanMemory(
									SdaiModel				model,
									int_t					mode
								);
ExpressID		DECL STDC	internalGetP21Line(
									SdaiInstance			instance
								);
SdaiInstance	DECL STDC	internalForceInstanceFromP21Line(
									SdaiModel				model,
									ExpressID				P21Line
								);
SdaiInstance	DECL STDC	internalGetInstanceFromP21Line(
									SdaiModel				model,
									ExpressID				P21Line
								);
const char		DECL * STDC	internalGetXMLID(
									SdaiInstance			instance,
									const char				** XMLID
								);
static	inline	const char	* internalGetXMLID(
									SdaiInstance			instance,
									char					** XMLID
								)
{
	return	internalGetXMLID(
					instance,
					(const char**) XMLID
				);
}
static	inline	const char	* internalGetXMLID(
									SdaiInstance			instance
								)
{
	return	internalGetXMLID(
					instance,
					(const char**) nullptr				
				);
}
int_t			DECL STDC	setStringUnicode(
									int_t					unicode
								);
void			DECL STDC	setFilter(
									SdaiModel				model,
									int_t					setting,
									int_t					mask
								);
int_t			DECL STDC	getFilter(
									SdaiModel				model,
									int_t					mask
								);
SdaiAggr		DECL STDC	xxxxGetEntityAndSubTypesExtent(
									SdaiModel				model,
									SdaiEntity				entity
								);
SdaiAggr		DECL STDC	xxxxGetEntityAndSubTypesExtentBN(
									SdaiModel				model,
									const char				* entityName
								);
static	inline	SdaiAggr	xxxxGetEntityAndSubTypesExtentBN(
									SdaiModel				model,
									char					* entityName
								)
{
	return	xxxxGetEntityAndSubTypesExtentBN(
					model,
					(const char*) entityName
				);
}
SdaiAggr		DECL STDC	xxxxGetAllInstances(
									SdaiModel				model
								);
SdaiAggr		DECL STDC	xxxxGetInstancesUsing(
									SdaiInstance			instance
								);
int_t			DECL STDC	xxxxDeleteFromAggregation(
									SdaiInstance			instance,
									const SdaiAggr			aggregate,
									int_t					elementIndex
								);
SdaiAttr		DECL STDC	xxxxGetAttrDefinitionByValue(
									SdaiInstance			instance,
									const void				* value
								);
const char		DECL * STDC	xxxxGetAttrNameByIndex(
									SdaiInstance			instance,
									SdaiInteger				index,
									const char				** name
								);
static	inline	const char	* xxxxGetAttrNameByIndex(
									SdaiInstance			instance,
									SdaiInteger				index,
									char					** name
								)
{
	return	xxxxGetAttrNameByIndex(
					instance,
					index,
					(const char**) name
				);
}
static	inline	const char	* xxxxGetAttrNameByIndex(
									SdaiInstance			instance,
									SdaiInteger				index
								)
{
	return	xxxxGetAttrNameByIndex(
					instance,
					index,
					(const char**) nullptr				
				);
}
SdaiInstance	DECL STDC	iterateOverInstances(
									SdaiModel				model,
									SdaiInstance			instance,
									SdaiEntity				* entity,
									const char				** entityName
								);
static	inline	SdaiInstance	iterateOverInstances(
										SdaiModel				model,
										SdaiInstance			instance,
										SdaiEntity				* entity,
										char					** entityName
									)
{
	return	iterateOverInstances(
					model,
					instance,
					entity,
					(const char**) entityName
				);
}
int_t			DECL STDC	iterateOverProperties(
									SdaiEntity				entity,
									SdaiInteger				index
								);
void			DECL * STDC	sdaiGetAggrByIterator(
									SdaiIterator			iterator,
									SdaiPrimitiveType		valueType,
									void					* value
								);
void			DECL STDC	sdaiPutAggrByIterator(
									SdaiIterator			iterator,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiPutAggrByIterator(
								SdaiIterator			iterator,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiPutAggrByIterator(
					iterator,
					valueType,
					(const void*) value
				);
}
void			DECL STDC	internalSetLink(
									SdaiInstance			instance,
									const char				* attributeName,
									int_t					linked_id
								);
static	inline	void	internalSetLink(
								SdaiInstance			instance,
								char					* attributeName,
								int_t					linked_id
							)
{
	return	internalSetLink(
					instance,
					(const char*) attributeName,
					linked_id
				);
}