ifcviewer/ifcengine/include/IfcEngine.cs


		/// <summary>
		///		sdaiCreateInstanceBNEI                                  (http://rdf.bg/ifcdoc/CS64/sdaiCreateInstanceBNEI.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiCreateInstanceBNEI")]
		public static extern int_t sdaiCreateInstanceBNEI(int_t model, string entityName, int_t express_id);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiCreateInstanceBNEI")]
		public static extern int_t sdaiCreateInstanceBNEI(int_t model, byte[] entityName, int_t express_id);

		/// <summary>
		///		setSegmentation                                         (http://rdf.bg/ifcdoc/CS64/setSegmentation.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "setSegmentation")]
		public static extern void setSegmentation(int_t model, int_t segmentationParts, double segmentationLength);

		/// <summary>
		///		getSegmentation                                         (http://rdf.bg/ifcdoc/CS64/getSegmentation.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "getSegmentation")]
		public static extern void getSegmentation(int_t model, out int_t segmentationParts, out double segmentationLength);

		/// <summary>
		///		setEpsilon                                              (http://rdf.bg/ifcdoc/CS64/setEpsilon.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "setEpsilon")]
		public static extern void setEpsilon(int_t model, int_t mask, double absoluteEpsilon, double relativeEpsilon);

		/// <summary>
		///		getEpsilon                                              (http://rdf.bg/ifcdoc/CS64/getEpsilon.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "getEpsilon")]
		public static extern int_t getEpsilon(int_t model, int_t mask, out double absoluteEpsilon, out double relativeEpsilon);

        //
        //  Controling API Calls
        //

		/// <summary>
		///		circleSegments                                          (http://rdf.bg/ifcdoc/CS64/circleSegments.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "circleSegments")]
		public static extern void circleSegments(int_t circles, int_t smallCircles);

		/// <summary>
		///		setMaximumSegmentationLength                            (http://rdf.bg/ifcdoc/CS64/setMaximumSegmentationLength.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "setMaximumSegmentationLength")]
		public static extern void setMaximumSegmentationLength(int_t model, double length);

		/// <summary>
		///		getUnitConversionFactor                                 (http://rdf.bg/ifcdoc/CS64/getUnitConversionFactor.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "getUnitConversionFactor")]
		public static extern double getUnitConversionFactor(int_t model, string unitType, out IntPtr unitPrefix, out IntPtr unitName, out IntPtr SIUnitName);

		[DllImport(IFCEngineDLL, EntryPoint = "getUnitConversionFactor")]
		public static extern double getUnitConversionFactor(int_t model, byte[] unitType, out IntPtr unitPrefix, out IntPtr unitName, out IntPtr SIUnitName);

		/// <summary>
		///		setBRepProperties                                       (http://rdf.bg/ifcdoc/CS64/setBRepProperties.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "setBRepProperties")]
		public static extern void setBRepProperties(int_t model, Int64 consistencyCheck, double fraction, double epsilon, int_t maxVerticesSize);

		/// <summary>
		///		cleanMemory                                             (http://rdf.bg/ifcdoc/CS64/cleanMemory.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "cleanMemory")]
		public static extern void cleanMemory(int_t model, int_t mode);

		/// <summary>
		///		internalGetP21Line                                      (http://rdf.bg/ifcdoc/CS64/internalGetP21Line.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "internalGetP21Line")]
		public static extern int_t internalGetP21Line(int_t instance);

		/// <summary>
		///		internalForceInstanceFromP21Line                        (http://rdf.bg/ifcdoc/CS64/internalForceInstanceFromP21Line.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "internalForceInstanceFromP21Line")]
		public static extern int_t internalForceInstanceFromP21Line(int_t model, int_t P21Line);

		/// <summary>
		///		internalGetInstanceFromP21Line                          (http://rdf.bg/ifcdoc/CS64/internalGetInstanceFromP21Line.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "internalGetInstanceFromP21Line")]
		public static extern int_t internalGetInstanceFromP21Line(int_t model, int_t P21Line);

		/// <summary>
		///		internalGetXMLID                                        (http://rdf.bg/ifcdoc/CS64/internalGetXMLID.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "internalGetXMLID")]
		public static extern void internalGetXMLID(int_t instance, out IntPtr XMLID);

		public static string internalGetXMLID(int_t instance)
		{
			IntPtr XMLID = IntPtr.Zero;
			internalGetXMLID(instance, out XMLID);
			return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(XMLID);
		}

		/// <summary>
		///		setStringUnicode                                        (http://rdf.bg/ifcdoc/CS64/setStringUnicode.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "setStringUnicode")]
		public static extern int_t setStringUnicode(int_t unicode);

		/// <summary>
		///		setFilter                                               (http://rdf.bg/ifcdoc/CS64/setFilter.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "setFilter")]
		public static extern void setFilter(int_t model, int_t setting, int_t mask);

		/// <summary>
		///		getFilter                                               (http://rdf.bg/ifcdoc/CS64/getFilter.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "getFilter")]
		public static extern int_t getFilter(int_t model, int_t mask);

        //
        //  Uncategorized API Calls
        //

		/// <summary>
		///		xxxxGetEntityAndSubTypesExtent                          (http://rdf.bg/ifcdoc/CS64/xxxxGetEntityAndSubTypesExtent.html)
		///
		///	model input parameter is irrelevant, but is required for backwards compatibility
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "xxxxGetEntityAndSubTypesExtent")]
		public static extern int_t xxxxGetEntityAndSubTypesExtent(int_t model, int_t entity);

		/// <summary>
		///		xxxxGetEntityAndSubTypesExtentBN                        (http://rdf.bg/ifcdoc/CS64/xxxxGetEntityAndSubTypesExtentBN.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "xxxxGetEntityAndSubTypesExtentBN")]
		public static extern int_t xxxxGetEntityAndSubTypesExtentBN(int_t model, string entityName);

		[DllImport(IFCEngineDLL, EntryPoint = "xxxxGetEntityAndSubTypesExtentBN")]
		public static extern int_t xxxxGetEntityAndSubTypesExtentBN(int_t model, byte[] entityName);

		/// <summary>
		///		xxxxGetAllInstances                                     (http://rdf.bg/ifcdoc/CS64/xxxxGetAllInstances.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "xxxxGetAllInstances")]
		public static extern int_t xxxxGetAllInstances(int_t model);

		/// <summary>
		///		xxxxGetInstancesUsing                                   (http://rdf.bg/ifcdoc/CS64/xxxxGetInstancesUsing.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "xxxxGetInstancesUsing")]
		public static extern int_t xxxxGetInstancesUsing(int_t instance);

		/// <summary>
		///		xxxxDeleteFromAggregation                               (http://rdf.bg/ifcdoc/CS64/xxxxDeleteFromAggregation.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "xxxxDeleteFromAggregation")]
		public static extern int_t xxxxDeleteFromAggregation(int_t instance, int_t aggregate, int_t elementIndex);

		/// <summary>
		///		xxxxGetAttrDefinitionByValue                            (http://rdf.bg/ifcdoc/CS64/xxxxGetAttrDefinitionByValue.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "xxxxGetAttrDefinitionByValue")]
		public static extern int_t xxxxGetAttrDefinitionByValue(int_t instance, ref int_t value);

		/// <summary>
		///		xxxxGetAttrNameByIndex                                  (http://rdf.bg/ifcdoc/CS64/xxxxGetAttrNameByIndex.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "xxxxGetAttrNameByIndex")]
		public static extern void xxxxGetAttrNameByIndex(int_t instance, int_t index, out IntPtr name);

		public static string xxxxGetAttrNameByIndex(int_t instance, int_t index)
		{
			IntPtr name = IntPtr.Zero;
			xxxxGetAttrNameByIndex(instance, index, out name);
			return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(name);
		}

		/// <summary>
		///		iterateOverInstances                                    (http://rdf.bg/ifcdoc/CS64/iterateOverInstances.html)
		///
		///	This function interates over all available instances loaded in memory, it is the fastest way to find all instances.
		///	Argument entity and entityName are both optional and if non-zero are filled with respectively the entity handle and entity name as char array.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "iterateOverInstances")]
		public static extern int_t iterateOverInstances(int_t model, int_t instance, out int_t entity, out IntPtr entityName);

		/// <summary>
		///		iterateOverProperties                                   (http://rdf.bg/ifcdoc/CS64/iterateOverProperties.html)
		///
		///	This function iterated over all available attributes of a specific given entity.
		///	This call is typically used in combination with iterateOverInstances(..).
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "iterateOverProperties")]
		public static extern int_t iterateOverProperties(int_t entity, int_t index);

		/// <summary>
		///		sdaiGetAggrByIterator                                   (http://rdf.bg/ifcdoc/CS64/sdaiGetAggrByIterator.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAggrByIterator")]
		public static extern int_t sdaiGetAggrByIterator(int_t iterator, int_t valueType, out bool value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAggrByIterator")]
		public static extern int_t sdaiGetAggrByIterator(int_t iterator, int_t valueType, out int_t value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAggrByIterator")]
		public static extern int_t sdaiGetAggrByIterator(int_t iterator, int_t valueType, out double value);

		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetAggrByIterator")]
		public static extern int_t sdaiGetAggrByIterator(int_t iterator, int_t valueType, out IntPtr value);

		/// <summary>
		///		sdaiPutAggrByIterator                                   (http://rdf.bg/ifcdoc/CS64/sdaiPutAggrByIterator.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "sdaiPutAggrByIterator")]
		public static extern void sdaiPutAggrByIterator(int_t iterator, int_t valueType, ref int_t value);

		/// <summary>
		///		internalSetLink                                         (http://rdf.bg/ifcdoc/CS64/internalSetLink.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "internalSetLink")]
		public static extern void internalSetLink(int_t instance, string attributeName, int_t linked_id);
